--- a/Views/Home/Privacy.cshtml
+++ b/Views/Home/Privacy.cshtml
@@ -1,6 +1,26 @@
 ﻿@{
-    ViewData["Title"] = "Privacy Policy";
+    ViewData["Title"] = "About Us";
 }
 <h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<p>
+    Bowls inc is not a real company fictionally created by it's founder and CEO Colby Morgan. Since it's grand reveal in October 14, 2022,
+    they have not sold a single bowl, as it stands right now it doesn't look like they'll be selling any bowls but still they remain a fictional company.
+</p>
+<p>
+    Our headquarters resigns in Colby's house as we don't currently have a building of our own but grand plans are in place for the future,
+    currently there is no way to contact our company so trying will prove to be futile.
+</p>
+<h2>Meet Our Staff</h2>
+
+<h3>CEO Colby Morgan</h3>
+<p>
+    Colby has been with the company right from the beggining and basically built up the entire company from the ground. It all started at St. Clair
+    college when Colby was working on an assignment for his class. The assignment required him to make a fictional company to put in his assignment and
+    just like that... Bowls Inc was born. To this day Colby remains as the only member of the company
+</p>
+
+<p>
+    Here we sell bowls, but not just bowls, the best bowls, and those that can't handle the best bowls should look for buisness somewhere else.
+    We don't sell bowls for your casual bowl collectors, only the hardcore bowl enthusists can truely appreciate what we sell here.
+</p>
