--- a/Views/Bowls/Index.cshtml
+++ b/Views/Bowls/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BowlsApp.Models.Bowl>
+﻿@model BowlsApp.Models.BowlGenreViewModel;
 
 @{
     ViewData["Title"] = "Index";
@@ -9,26 +9,41 @@
 <p>
     <a asp-action="Create">Create New</a>
 </p>
+
+<form asp-controller="Bowls" asp-action="Index" method="get">
+    <p>
+        <select asp-for="BowlGenre" asp-items="Model.Genres">
+            <option value="">All</option>
+        </select>
+
+        Title: <input type="text" asp-for="SearchString" />
+        <input type="submit" value="Filter" />
+    </p>
+</form>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Title)
+                @Html.DisplayNameFor(model => model.Bowls[0].Title)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.ReleaseDate)
+                @Html.DisplayNameFor(model => model.Bowls[0].ReleaseDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Genre)
+                @Html.DisplayNameFor(model => model.Bowls[0].Genre)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Price)
+                @Html.DisplayNameFor(model => model.Bowls[0].Price)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Bowls[0].Rating)
             </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
-@foreach (var item in Model) {
+        @foreach (var item in Model.Bowls)
+        {
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Title)
@@ -43,11 +58,14 @@
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
+                @Html.DisplayFor(modelItem => item.Rating)
+            </td>
+            <td>
                 <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
                 <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
                 <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
             </td>
         </tr>
-}
+        }
     </tbody>
 </table>
